syntax = "proto3";
package gdex.liquidity.v1beta1;

option go_package = "github.com/tendermint/farming/x/liquidity/types";

// GenesisState defines the liquidity module's genesis state.
message GenesisState {}